--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,9 +61,19 @@ body{
     padding: 16px 30px;
     border-radius: 42px;
     background-color: #E6533C;
-
-
+    cursor: pointer;
 }
+.all_description{
+    font-size: 0.875rem;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.5);
+}
+.display_grid{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 40px;    
+}
+
 
 /* -----------navbar----------- */
 .navbar{
@@ -148,6 +158,7 @@ body{
     border-radius: 42px;
     background-color: transparent;
     border: 1px solid white;
+    cursor: pointer;
    
 
 }
@@ -173,4 +184,293 @@ body{
 .img_border{
     margin-bottom: -5px;
     /* border: 1px solid red; */
+}
+
+/* habit title */
+.habit_title{
+    font-size: 3rem;
+    font-weight: 900;
+    color: white;   
+}
+.habit_center{ 
+    /* max-width: 1044px; */
+    margin-top: 30px;
+    border: 1px solid #E6533C;
+    text-align: center;
+    
+}
+.i{
+    
+    border: 1px solid wheat;
+
+}
+.habit_middle{
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    /* border: 1px solid rgb(208, 216, 210); */
+}
+
+
+
+
+
+
+
+
+/* .habit_border{
+                               border: 1px solid red; 
+} */
+
+/* habit IMAGES */
+.image{
+    height: 180px;
+    width: 180px;
+    box-sizing: border-box;
+    border-radius: 50%;
+    border:4px solid rgba(255, 255, 255, 0.1);   
+}
+.img_container{
+    margin-top: 30px;
+    /* border: 1px solid red; */
+    text-align: center;   
+}
+.image_title{
+    font-size: 1.125rem;
+    font-weight: 600;
+}
+.image_description{
+    font-size: 0.875rem;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+/* run section */
+.run_section_display_grid{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 300px;
+}
+.run_section_button{
+
+}
+.run_section{
+    
+    /* border: 1px solid turquoise; */
+    background-color: rgba(34, 34, 34, 1);
+    border-radius: 18px;
+}
+.run_image{
+    margin-left: 160px;
+    height: 312px;
+    width: 366px;
+    box-sizing: border-box;
+    border-radius: 18px;
+    /* border:4px solid rgba(255, 255, 255, 0.1); */
+}
+.run_title{
+    font-size: 3rem;
+    font-weight: 900;
+    color: white; 
+}
+.run_description{
+    font-size: 0.875rem;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.mn{
+    margin-top: 70px;
+    padding: 30px;
+    /* max-width: 1060px; */
+    align-items: center;
+}
+
+
+.x{
+    /* border: 1px solid salmon; */
+}
+/* r<!-- run section end --> */
+
+/* trannings section start */
+.traning_img_container{
+    /* border: 1px solid tomato;  */
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.bottom_heading{
+    margin-bottom: 5px;
+}
+.gap{
+    
+    margin-top: 90px;
+    width: 670px;
+}
+.top{
+    margin-top: 50px;
+    
+}
+
+    
+
+.img1{
+    max-width: 370px;
+    background-color: rgba(6, 255, 210, 0.5);
+}
+.img2{
+    max-width: 630px;
+}
+.img3{
+    max-width: 430px;
+}
+.img4{
+    max-width: 580px;
+}
+.img5{
+    max-width: 350px;
+}
+.img6{
+    max-width: 500px;
+}
+
+
+/* BMI Table */
+.table_title{
+    /* border: 1px solid red; */
+}
+
+
+.t_title{
+    font-weight: 900;
+}
+.table_background{
+    /* width: 1920px; */ 
+    background-color: rgb(43, 42, 42);
+}
+.table_w_h{
+    
+    display: flex;
+    justify-content: space-between;
+}
+.table_font{
+    font-size: 1rem;
+    font-weight: 400;
+}
+tr, td{
+    padding-left: 20px;
+}
+tr > td{
+    font-size: 0.8rem;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.329);
+}
+table, td, th {
+    border: 1px solid rgba(255, 255, 255, 0.1);
+  } 
+table {
+    width: 310px;
+    height: 212px;
+    border-collapse: collapse;   
+  }
+.yoyo{
+    width: 577px;
+    /* border: 1px solid teal; */
+}
+.yoyo_container{
+    border-radius: 8px;
+    border: none;
+    border-color: none;
+    width: 288.5px;
+    height: 48px;
+    color: rgba(255, 255, 255, 0.329);
+
+    background-color:rgba(122, 121, 121, 0.425);
+}
+.yoyo_last{
+    width: 577px;
+    height: 48px;  
+    margin-bottom: 30px;
+    color: rgba(255, 255, 255, 0.329);
+
+    background-color:rgba(122, 121, 121, 0.425); 
+    border: none;
+}
+.box_top{
+    margin-top: 10px;
+    border-radius: 8px;   
+}
+.btn{
+    border: none;
+    padding: 20 80px;
+    margin-bottom: 30px;
+}
+
+/* END--------- */
+
+.out_team{
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+/* Trainner Picture +------------------------*/
+.trainner_picture{
+    background-color: rgba(34, 34, 34, 1);
+    width: 1250px;
+    margin: 0 auto;
+    border-radius: 18px;
+    
+}
+.trainer_section{
+    margin-bottom: 70px;
+}
+.trainner_img{
+    width: 360px;
+    height: 302px;
+    border-radius: 18px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    /* border: 1px solid red; */  
+}
+.trainner_grid{ 
+    margin-left: 60px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: space-around;
+    align-content: space-evenly;  
+}
+
+/* ---------------footer--------- */
+.footer_get_started{
+    font-weight: 900;
+    font-size: 2rem;
+    color: #ffff;
+}
+.footer_link{
+    font-family: "Inter";
+    font-weight: 400;
+    font-size: 1.4375rem;
+    color: rgba(255, 255, 255, 0.6);
+    text-decoration: none;
+}
+.footer_display_flex{
+    display: flex;
+    gap: 60px;
+}
+.footer{
+    margin: 0 20px;
+}
+
+.footer_last_option{
+    border-top: 1px solid rgba(255, 255, 255, 0.5); 
+    justify-content: center;
+    margin-top: 40px;
+    
+    
+}
+.footer_description{
+    font-weight: 400;
+    font-size: 1.25rem;
+    color: rgba(255, 255, 255, 0.6);
 }
